@@ -1,0 +1,59 @@
+{
+    "schema":  "weftend.shadowAudit.result/0",
+    "v":  0,
+    "status":  "DENY",
+    "reasonFamilies":  [
+                           "SHADOW_AUDIT_BOUNDS_EXCEEDED"
+                       ],
+    "tartarusKindCounts":  {
+                               "KIND_00":  1,
+                               "KIND_01":  1,
+                               "KIND_02":  1,
+                               "KIND_03":  1,
+                               "KIND_04":  1,
+                               "KIND_05":  1,
+                               "KIND_06":  1,
+                               "KIND_07":  1,
+                               "KIND_08":  1,
+                               "KIND_09":  1,
+                               "KIND_10":  1,
+                               "KIND_11":  1,
+                               "KIND_12":  1,
+                               "KIND_13":  1,
+                               "KIND_14":  1,
+                               "KIND_15":  1,
+                               "KIND_16":  1,
+                               "KIND_17":  1,
+                               "KIND_18":  1,
+                               "KIND_19":  1,
+                               "KIND_20":  1,
+                               "KIND_21":  1,
+                               "KIND_22":  1,
+                               "KIND_23":  1,
+                               "KIND_24":  1,
+                               "KIND_25":  1,
+                               "KIND_26":  1,
+                               "KIND_27":  1,
+                               "KIND_28":  1,
+                               "KIND_29":  1,
+                               "KIND_30":  1,
+                               "KIND_31":  1
+                           },
+    "counts":  {
+                   "events":  40,
+                   "warnings":  0,
+                   "denies":  1,
+                   "quarantines":  0
+               },
+    "sequenceCounts":  {
+                           "missing":  0,
+                           "extra":  0,
+                           "reordered":  0,
+                           "duplicate":  0
+                       },
+    "capCounts":  {
+                      "attemptedWithoutRequest":  0,
+                      "allowedWithoutEvidence":  0,
+                      "inconsistent":  0
+                  }
+}
